# TemplateSoapServer

./: .gitignore  .gitmodules  CMakeLists.txt  application.yaml  autogenerate_server.sh  kdsoap_build.sh
src/: helloworld_serverobject.h  main.cpp
src/config/: ConfigurationService.h  IConfiguration.h  LocatorConfiguration.cpp  LocatorConfiguration.h  NullConfiguration.h  StructCfg.h  YamlConfiguration.h
src/wsdl/: wsdl_helloworld.cpp  wsdl_helloworld.h
